# pythonProject_django

./: .gitignore  README.md  pyproject.toml  requirements.txt
catalog/: models.py  urls.py  views.py
catalog/templates/catalog/: contacts.html
config/: settings.py  urls.py
config/config/: settings.py
